--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "ps-xiuxian",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "一人修仙，全家受益。",
+    "main": "docs/index.html",
     "scripts": {
-        "sass": "sass --watch src/sass/main.sass:./docs/css/main.css",
+        "sass": "node-sass --watch --recursive --output docs/css  src/sass",
         "coffee": "coffee -o ./docs/js -cbw ./src/coffee/*.coffee",
         "assert": "npm run sass & npm run coffee",
         "dev": "node dev.js",
         "parcel": "parcel index.html"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "keywords": ["leaning", "photoshop"],
+    "author": "ChenMingMing<1733996866@qq.com>",
+    "license": "MIT",
     "devDependencies": {
         "asciidoctor.js": "^1.5.6-rc.1",
         "chalk": "^2.4.1",
